--- a/themes/hsk/sass/_header.sass
+++ b/themes/hsk/sass/_header.sass
@@ -8,11 +8,11 @@ header
   padding-top: 20px
   +legacy-pie-clearfix
 
-#block-presseclub-branding
+#block-hsk-branding
   width: 55%
   float: left
 
-nav#block-presseclub-main-menu
+nav#block-hsk-main-menu
   display: none
   @include legacy-pie-clearfix
   clear: both
@@ -77,7 +77,7 @@ nav#block-useraccountmenu
       a
         +font-smaller
         color: $grey-text
-nav#block-presseclub-footer
+nav#block-hsk-footer
   float: right
   ul
     margin-top: 0
@@ -127,7 +127,7 @@ nav#block-presseclub-footer
 /*------------------------------------------- */
 +breakpoint($breakpoint-desktop-narrow)
   header
-    #block-presseclub-branding
+    #block-hsk-branding
       width: auto
       .logo
         img
@@ -135,17 +135,17 @@ nav#block-presseclub-footer
     nav#block-useraccountmenu
       float: right
       margin-top: 4px
-    nav#block-presseclub-footer
+    nav#block-hsk-footer
       margin-top: 4px
       float: right
     .search-block-form
       clear: right
       float: right
       margin-top: 21px
-    nav#block-presseclub-main-menu
+    nav#block-hsk-main-menu
       clear: both
 
-  nav#block-presseclub-main-menu
+  nav#block-hsk-main-menu
     margin-bottom: 0
     clear: both
     padding-top: 30px
@@ -211,7 +211,7 @@ nav#block-presseclub-footer
       cursor: hand
 
   .path-frontpage
-    nav#block-presseclub-main-menu
+    nav#block-hsk-main-menu
       border-bottom: 1px solid #999
 
 
