Admin Menu vom z-Index immer oberhalb des Theme Header halten

--- a/themes/hsk_zymphonies/sass/_layout.sass
+++ b/themes/hsk_zymphonies/sass/_layout.sass
@@ -11,6 +11,10 @@
 /*------------------------------------------- */
 /*------------------------------------------- */
 +breakpoint($breakpoint-tablet-portrait)
+  #toolbar-administration
+    z-index: 90
+  header.main-header
+    z-index: 10
 
 /* End Media Query Tablet Portrait */
 
