--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i);
 html {
   font-size: 15.5px; }
 
@@ -8,7 +9,7 @@ body {
   font-size: 1rem;
   line-height: 1.5;
   color: #333333;
-  font-family: "Roboto", sans-serif;
+  font-family: "Open Sans", sans-serif;
   /*- Desktop narrow - */ }
   @media only screen and (min-width: 1024px) {
     body {
@@ -347,7 +348,7 @@ nav#block-useraccountmenu {
         font-size: 1rem;
         line-height: 1.5;
         color: #333333;
-        font-family: "Roboto", sans-serif;
+        font-family: "Open Sans", sans-serif;
         /*- Desktop narrow - */
         font-size: 11.7px;
         font-size: 0.9rem;
@@ -368,7 +369,7 @@ nav#block-hsk-footer {
         font-size: 1rem;
         line-height: 1.5;
         color: #333333;
-        font-family: "Roboto", sans-serif;
+        font-family: "Open Sans", sans-serif;
         /*- Desktop narrow - */
         font-size: 11.7px;
         font-size: 0.9rem;
