Hintergrundfarbe für .offcanvas-lining auf transparent gesetzt. War dunkelgrau und versaute das Design.

--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -135,6 +135,9 @@ ul.tabs.primary {
 /*------------- All Screen Sizes ------------- */
 /*------------------------------------------- */
 /*------------------------------------------- */
+.offcanvas-lining {
+  background: transparent; }
+
 /*------------------------------------------- */
 /*------------------------------------------- */
 /*----------- Tablet Portrait ---------------- */
