Der Plus-Button im Place-Block-Modus war nicht sichtbar, da das a-Element keine Breite hatte durch display: inline

--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -106,6 +106,9 @@ ul.tabs.primary {
     ul.tabs.primary li a:hover {
       text-decoration: none; }
 
+.block-place-region a.button {
+  display: inline-block; }
+
 /*------------------------------------------- */
 /*------------------------------------------- */
 /*----------- Tablet Portrait ---------------- */
