--- a/themes/hsk_zymphonies/sass/_layout.sass
+++ b/themes/hsk_zymphonies/sass/_layout.sass
@@ -6,6 +6,25 @@
 .offcanvas-lining
   background: transparent
 
+#page-title
+  background: #333
+  border-top: 5px solid #555
+  border-bottom: 5px solid #ccc
+  #block-pagetitle
+    margin-bottom: 0
+  h1
+    color: white
+    display: inline-block
+    margin: 20px 0 -5px
+    padding-bottom: 25px
+    +x-rem(font-size, 2)
+    border-bottom: 5px solid $primary-color
+
+.content_layout
+  margin-top: 30px
+
+
+
 
 /*------------------------------------------- */
 /*------------------------------------------- */
