--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -3,7 +3,10 @@
 /*------------- All Screen Sizes -------------*/
 /*------------------------------------------- */
 /*------------------------------------------- */
-
+.node
+  .comment-submitted
+    border: none
+    padding: 0
 
 /*------------------------------------------- */
 /*------------------------------------------- */
