--- a/themes/hsk_zymphonies/sass/includes/_colors.sass
+++ b/themes/hsk_zymphonies/sass/includes/_colors.sass
@@ -1,8 +1,12 @@
 // Background and area colors
 
-$niedersachsen-rot: #CC0033
+$orange-flaeche: #ED8600
+$orange-text: #E27500
 
-$link-color: $niedersachsen-rot
+$primary-color: #ED8600
+$primary-color-text: #E27500
+
+$link-color: $orange-text
 $base-text-color: #333
 $light-grey-text: #888
 $grey-text: #666
