--- a/themes/hsk_zymphonies/sass/_layout.sass
+++ b/themes/hsk_zymphonies/sass/_layout.sass
@@ -7,13 +7,13 @@
   background: transparent
 
 #page-title
-  background: #333
-  border-top: 5px solid #555
+  background: #ddd
+  border-top: 5px solid #ccc
   border-bottom: 5px solid #ccc
   #block-pagetitle
     margin-bottom: 0
   h1
-    color: white
+    color: black
     display: inline-block
     margin: 20px 0 -5px
     padding-bottom: 25px
@@ -22,6 +22,13 @@
 
 .content_layout
   margin-top: 30px
+
+.footer-menu
+  background: #999
+  a
+    color: white
+.copyright
+  background: #818181
 
 
 
